{{$NEXT}}

    - This release includes many changes to method names, options, and
      documentation aimed at improving approachability, but existing code should
      continue to work.  See the new Backward Compatibility section in the main
      PDF::API2 documentation for details about deprecation timelines and a
      suggested workflow for handling upgrades.

    - Renamed several methods in the PDF::API2 base class:

      - end -> close
      - open_scalar -> from_string
      - stringify -> to_string
      - pages -> page_count
      - importPageIntoForm -> embed_page
      - isEncrypted -> is_encrypted
      - xmpMetadata -> xml_metadata
      - outlines -> outline

    - Merged saveas into save.

    - Added individual accessors for PDF metadata (title, author, producer,
      etc.).  Replaced info and infoMetaAttributes with info_metadata for custom
      metadata.

    - Added $page->boundaries() and $pdf->default_page_boundaries() to replace
      the separate methods for the various page boundaries.  The supported
      arguments are slightly different; some edge cases have been removed and
      new options have been added.  See below and the PDF::API2::Page
      documentation for details.

    - Added $page->size() and $pdf->default_page_size() as a shortcut for
      setting the media box.

    - Both $page->size() and $page->boundaries() (and their $pdf default
      equivalents) now accept "WxH" page sizes in inches (e.g. 11x17 or 8.5x11).
      This does not apply to the deprecated versions of these methods.

    - Both $page->size() and $page->boundaries() (and their $pdf default
      equivalents) now accept a single number for page boundaries other than the
      media box, representing an amount in points to shrink the next larger box.
      This does not apply to the deprecated versions of these methods.

    - Replaced pageLabel with page_labels.  The option syntax is slightly